# gesture_detection

./: README.md  sdkconfig  sdkconfig.old
main/: app_camera_esp.h  esp_cli.c  esp_main.h  image_provider.cc  image_provider.h  main_functions.cc  person_detect_model_data.cc
scripts/: image copy.txt  image.txt  show_txt.py
static_images/: CMakeLists.txt
static_images/sample_images/: convert_image.py  image10  image11  image12  image13  image14  image15  image16  image17  image18  image19  image20  image21  output.txt  resize_image.py  show_grey_pic.py  show_pic.py
